--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Sistem Tracker PEKA B40 - Klinik SihatSokmo</title>
 
+<!-- COOP/COEP (benarkan popup OAuth berkomunikasi) -->
+<meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups">
+<meta http-equiv="Cross-Origin-Embedder-Policy" content="unsafe-none">
+
 <!-- Bootstrap & Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
@@ -93,25 +97,15 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 .log-loading{ display:none; text-align:center; padding:10px }
 .log-loading.active{ display:block }
 
-/* NADI grid input - auto expand */
-.nadi-scroll{overflow-x:auto; padding-bottom:4px}
-.nadi-row{
-  display:grid;
-  grid-auto-flow: column;           /* baris memanjang ke kanan */
-  grid-auto-columns: max-content;   /* lebar ikut kandungan */
-  gap:8px; align-items:center;
-  width:max-content;                /* biar boleh overflow dan scroll */
-}
-.nadi-input{ width:auto; min-width:120px; }
+/* NADI grid input - auto expand (lebar ikut teks) */
+.nadi-input{ min-width:120px; width:auto; }
 .nadi-long{ min-width:220px; }
-/* Input group DXT jangan paksa penuh */
-.nadi-dxt-group{ display:flex; gap:6px; align-items:center; flex:0 0 auto; }
-.nadi-dxt-group .form-select,
-.nadi-dxt-group .form-control{ width:auto; min-width:110px; }
+.nadi-row{ display:grid; grid-template-columns: 220px 140px 160px 240px 140px 220px 120px 120px 120px 120px 120px 360px 180px; gap:8px; align-items:center; }
+.nadi-row > * { white-space:nowrap; }
 
 /* Responsive */
 @media (max-width:992px){
-  .nadi-row{ grid-auto-columns: minmax(160px, max-content); }
+  .nadi-row{ grid-template-columns: repeat(1, minmax(220px, 1fr)); }
 }
 </style>
 </head>
@@ -254,8 +248,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
       </div>
     </div>
     <div class="card"><div class="card-body">
-      <!-- scroll container untuk baris panjang -->
-      <div class="nadi-scroll"><div id="nadiContainer"></div></div>
+      <div id="nadiContainer"></div>
       <div class="text-muted small mt-2">Nota: Baris “Layak” boleh terus <b>Daftar</b> (simpan ke sheet). Baris “Tidak Layak” tidak disimpan ke sheet tetapi tetap dieksport CSV bersama-sama.</div>
     </div></div>
   </section>
@@ -289,7 +282,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
   <section id="pendaftaran" class="mb-4 d-none">
     <h2 class="h6 mb-3"><i class="fas fa-user-plus me-2"></i>Pendaftaran Pesakit Baru</h2>
     <div class="card"><div class="card-body">
-      <form id="formPendaftaran">
+      <form id="formPendaftaran" autocomplete="off">
         <div class="row g-3">
           <div class="col-md-6"><label class="form-label">Nama Penuh Pesakit</label><input id="namaPesakit" class="form-control" required></div>
           <div class="col-md-6"><label class="form-label">Nombor IC</label><input id="noIC" class="form-control" required></div>
@@ -497,8 +490,11 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 /* =======================
    KONFIG (EDIT INI SAHAJA)
 ======================= */
+// 1) Isi URL Web App Apps Script (deployment terkini)
 const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec';
+// 2) Google OAuth Client ID
 const GOOGLE_CLIENT_ID = '863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com';
+// 3) Logo (optional)
 const LOGO_URL = 'https://github.com/sihat9/mari-jalan-dengan-doktor/blob/main/img/logo-kss.png?raw=true';
 
 /* =======================
@@ -512,7 +508,8 @@ function initGoogleSignIn(){
     client_id: GOOGLE_CLIENT_ID,
     callback: handleCredentialResponse,
     auto_select: false,
-    cancel_on_tap_outside: true
+    cancel_on_tap_outside: true,
+    use_fedcm_for_prompt: false // elak isu postMessage/COOP
   });
   google.accounts.id.renderButton(
     document.getElementById('signinArea'),
@@ -526,6 +523,7 @@ function initGoogleSignIn(){
 
 async function handleCredentialResponse(resp){
   ID_TOKEN = resp.credential;
+  // Ping backend whoami (server verify + allowlist)
   const r = await fetch(SCRIPT_URL, {
     method:'POST',
     headers:{ 'Content-Type':'application/x-www-form-urlencoded' },
@@ -538,7 +536,7 @@ async function handleCredentialResponse(resp){
     document.getElementById('staffEmail').textContent = STAFF_EMAIL;
     document.getElementById('signinArea').innerHTML = '';
     document.getElementById('signinAreaDesktop').innerHTML = '';
-    bootstrapApp();
+    bootstrapApp(); // muat data
   } else {
     toast('Akses Ditolak', j.message || 'Sila hubungi admin untuk allowlist.', 'danger');
     ID_TOKEN = ''; STAFF_EMAIL = '';
@@ -644,10 +642,12 @@ let retcaModal, secondTcaModal, pdpaModal;
    BOOTSTRAP APP
 ======================= */
 function bootstrapApp(){
+  // logo (fallback)
   const logoEl = document.getElementById('brandLogo');
   logoEl.src = LOGO_URL;
   logoEl.onerror = () => (logoEl.src='https://via.placeholder.com/64x64.png?text=KS');
 
+  // tarikh
   document.getElementById('current-date').textContent =
     new Date().toLocaleDateString('ms-MY', { weekday:'long', year:'numeric', month:'long', day:'numeric' });
 
@@ -662,6 +662,7 @@ function bootstrapApp(){
   loadDashboardData();
   loadStatistics('3months');
   loadCompletedStatistics('3months');
+  // Auto muat TCA call section di dashboard
   loadTCACallData();
 }
 
@@ -780,7 +781,7 @@ function setupLogDrawer(){
 }
 function autoRefreshLogs(){
   stopAutoRefreshLogs();
-  logDrawerTimer = setInterval(()=> refreshLogs({silent:true}), 10000);
+  logDrawerTimer = setInterval(()=> refreshLogs({silent:true}), 10000); // 10s
 }
 function stopAutoRefreshLogs(){
   if (logDrawerTimer){ clearInterval(logDrawerTimer); logDrawerTimer=null; }
@@ -899,24 +900,14 @@ async function daftarFromExcel(rowId, encNama, encIC, msisdn){
 }
 
 /* =======================
-   NADI PAGE + AUTO-EXPAND
+   NADI PAGE (Auto-Expand)
 ======================= */
-function attachAutoGrow(input, minCh=12, maxCh=80){
-  const update=()=>{
-    const len = Math.max(minCh, Math.min(maxCh, (input.value||'').length + 1));
-    input.style.width = len + 'ch';
-  };
-  update();
-  input.addEventListener('input', update);
-}
-
 function setupNADI(){
   const container = document.getElementById('nadiContainer');
   container.innerHTML = '';
-  addNadiRow();
+  addNadiRow(); // mula 1 baris
   document.getElementById('btnNadiExportCsv').addEventListener('click', exportNadiCSV);
 }
-
 function addNadiRow(){
   const container = document.getElementById('nadiContainer');
   const id = 'n'+Date.now()+Math.random().toString(36).slice(2,6);
@@ -929,12 +920,12 @@ function addNadiRow(){
     <input class="form-control form-control-sm nadi-input nadi-tel" placeholder="Telefon (012.. atau 60..)" />
     <input class="form-control form-control-sm nadi-input nadi-alamat nadi-long" placeholder="Alamat" />
     <input class="form-control form-control-sm nadi-input nadi-bp" placeholder="BP (cth: 120/80)" />
-    <div class="nadi-dxt-group">
-      <select class="form-select form-select-sm nadi-dxt-type">
+    <div class="input-group input-group-sm">
+      <select class="form-select nadi-dxt-type">
         <option value="Fasting">Fasting</option>
         <option value="Random">Random</option>
       </select>
-      <input class="form-control form-control-sm nadi-dxt" placeholder="DXT (mmol/L)" />
+      <input class="form-control nadi-dxt" placeholder="DXT (mmol/L)" />
     </div>
     <input class="form-control form-control-sm nadi-input nadi-tinggi" placeholder="Tinggi (cm)" />
     <input class="form-control form-control-sm nadi-input nadi-berat" placeholder="Berat (kg)" />
@@ -954,16 +945,10 @@ function addNadiRow(){
   `;
   container.appendChild(row);
 
-  // AUTO-GROW sasaran
-  [
-    '.nadi-nama','.nadi-ic','.nadi-tel','.nadi-alamat','.nadi-bp',
-    '.nadi-dxt','.nadi-tinggi','.nadi-berat','.nadi-bmi','.nadi-staff'
-  ].forEach(sel=>{
-    const el = row.querySelector(sel);
-    if (el) attachAutoGrow(el, el.classList.contains('nadi-long') ? 24 : 12, 120);
-  });
+  // Auto-expand: laraskan lebar input ikut kandungan
+  attachAutoExpand(row.querySelectorAll('.nadi-input, .nadi-dxt, .nadi-staff'));
 
-  // BMI auto-kira
+  // BMI auto
   const tinggi = row.querySelector('.nadi-tinggi');
   const berat  = row.querySelector('.nadi-berat');
   const bmi    = row.querySelector('.nadi-bmi');
@@ -971,12 +956,11 @@ function addNadiRow(){
     const h = parseFloat(tinggi.value||'0')/100;
     const w = parseFloat(berat.value||'0');
     bmi.value = (!h||!w) ? '' : (w/(h*h)).toFixed(1);
-    attachAutoGrow(bmi, 8, 16);
+    autoExpandEl(bmi);
   }
   tinggi.addEventListener('input', calcBMI);
-  berat.addEventListener('input', calcBMI);
+  berat .addEventListener('input', calcBMI);
 
-  // Kelayakan/Daftar
   const layak = row.querySelector('.nadi-layak');
   const tak   = row.querySelector('.nadi-taklayak');
   const tcaD  = row.querySelector('.nadi-tca-date');
@@ -990,7 +974,7 @@ function addNadiRow(){
   });
   tak.addEventListener('change', ()=>{ if (tak.checked){ layak.checked=false; tcaD.disabled=true; tcaT.disabled=true; staff.disabled=true; btnReg.disabled=true; } });
 
-  // Daftar → simpan ke sheet (yang layak sahaja)
+  // Daftar → simpan ke sheet (bagi yang layak sahaja)
   btnReg.addEventListener('click', async ()=>{
     const nama   = row.querySelector('.nadi-nama').value.trim();
     const ic     = row.querySelector('.nadi-ic').value.trim();
@@ -1004,9 +988,42 @@ function addNadiRow(){
     }catch(e){ toast('Ralat', e.message, 'danger'); }
   });
 
-  // Tambah/Buang baris
+  // Tambah/Buang
   row.querySelector('.nadi-tambah').addEventListener('click', addNadiRow);
   row.querySelector('.nadi-buang').addEventListener('click', ()=> row.remove());
+}
+
+// Auto-expand helpers
+let _measureSpan;
+function ensureMeasureSpan(){
+  if (_measureSpan) return _measureSpan;
+  _measureSpan = document.createElement('span');
+  _measureSpan.style.visibility='hidden';
+  _measureSpan.style.position='absolute';
+  _measureSpan.style.whiteSpace='pre';
+  _measureSpan.style.fontSize='12px';
+  document.body.appendChild(_measureSpan);
+  return _measureSpan;
+}
+function autoExpandEl(el){
+  const span = ensureMeasureSpan();
+  const cs = getComputedStyle(el);
+  span.style.font = cs.font;
+  span.style.fontSize = cs.fontSize;
+  span.style.fontFamily = cs.fontFamily;
+  span.textContent = el.value || el.placeholder || '';
+  const pad = 28; // ruang butang/ikon
+  const min = parseInt(el.dataset.minw || (el.classList.contains('nadi-long')?220:120),10);
+  const max = 640;
+  let w = Math.ceil(span.getBoundingClientRect().width) + pad;
+  w = Math.min(Math.max(w, min), max);
+  el.style.width = w + 'px';
+}
+function attachAutoExpand(nodeList){
+  nodeList.forEach(el=>{
+    autoExpandEl(el);
+    el.addEventListener('input', ()=>autoExpandEl(el));
+  });
 }
 
 function exportNadiCSV(){
@@ -1047,6 +1064,8 @@ async function loadDashboardData(){
       totalSelesai.textContent = data.data.totalSelesai || 0;
       labFollowUpDue.textContent = data.data.labFollowUpDue || 0;
       labFollowUpPending.textContent = data.data.labFollowUpPending || 0;
+    } else {
+      toast('Ralat', data.message || 'Gagal memuat data dashboard', 'danger');
     }
   }catch(e){ toast('Ralat','Gagal memuat data dashboard','danger'); }
 }
@@ -1085,7 +1104,7 @@ async function loadTCACallData(){
         <td>${p.noIC}</td>
         <td class="mini-actions">
           <a class="btn btn-sm btn-outline-secondary" href="${telHref(msisdn)}"><i class="fa-solid fa-phone"></i> Call</a>
-          <a class="btn btn-sm btn-outline-success" target="_blank" href="${waHref(msisdn)}"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
+          <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="${waHref(msisdn)}"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
           <div class="small text-muted mt-1">${msisdn}</div>
         </td>
         <td>${p.tarikhTCA}</td>
@@ -1122,8 +1141,8 @@ async function loadFirstVisitData(){
         if (p.pdpaFileId){
           pdpaHTML = `
             <div class="d-flex flex-wrap gap-1">
-              <a class="btn btn-sm btn-outline-success" target="_blank" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
-              <a class="btn btn-sm btn-outline-primary" target="_blank" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
+              <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
+              <a class="btn btn-sm btn-outline-primary" target="_blank" rel="noopener" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
               <button class="btn btn-sm btn-outline-danger" onclick="deletePDPA('${p.noIC}')"><i class="fa-solid fa-trash"></i> Padam</button>
             </div>`;
         } else {
@@ -1143,7 +1162,7 @@ async function loadFirstVisitData(){
             ${!hadir ? `<button class="btn btn-sm btn-primary" onclick="openRetcaModal('${p.noIC}')"><i class="fa-solid fa-calendar-plus"></i> Re-TCA</button>` : ''}
             ${msisdn ? `
               <a class="btn btn-sm btn-outline-secondary" href="${telHref(msisdn)}"><i class="fa-solid fa-phone"></i></a>
-              <a class="btn btn-sm btn-outline-success" target="_blank" href="${waHref(msisdn)}"><i class="fa-brands fa-whatsapp"></i></a>` : ''}
+              <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="${waHref(msisdn)}"><i class="fa-brands fa-whatsapp"></i></a>` : ''}
           </td>
         </tr>`;
         tbody.insertAdjacentHTML('beforeend', row);
@@ -1170,7 +1189,7 @@ async function loadLabFollowUp(){
           <td>${p.noIC}</td>
           <td class="mini-actions">
             <a class="btn btn-sm btn-outline-secondary" href="${telHref(msisdn)}"><i class="fa-solid fa-phone"></i> Call</a>
-            <a class="btn btn-sm btn-outline-success" target="_blank" href="${waHref(msisdn,'Keputusan makmal anda telah siap.')}"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
+            <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="${waHref(msisdn,'Keputusan makmal anda telah siap.')}"><i class="fa-brands fa-whatsapp"></i> WhatsApp</a>
             <div class="small text-muted mt-1">${msisdn}</div>
           </td>
           <td>${p.firstVisitDate}</td>
@@ -1203,8 +1222,8 @@ async function loadSecondVisitData(){
 
         let pdpaHTML = p.pdpaFileId
           ? `<div class="d-flex flex-wrap gap-1">
-              <a class="btn btn-sm btn-outline-success" target="_blank" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
-              <a class="btn btn-sm btn-outline-primary" target="_blank" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
+              <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
+              <a class="btn btn-sm btn-outline-primary" target="_blank" rel="noopener" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
             </div>`
           : `<span class="text-danger">PDPA tiada</span>`;
 
@@ -1219,7 +1238,7 @@ async function loadSecondVisitData(){
             ${within && !hadir ? `<button class="btn btn-sm btn-success" onclick="markSecondVisitHadir('${p.noIC}')"><i class="fa-solid fa-circle-check"></i> Hadir</button>` : ''}
             ${msisdn ? `
               <a class="btn btn-sm btn-outline-secondary" href="${telHref(msisdn)}"><i class="fa-solid fa-phone"></i></a>
-              <a class="btn btn-sm btn-outline-success" target="_blank" href="${waHref(msisdn)}"><i class="fa-brands fa-whatsapp"></i></a>` : ''}
+              <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="${waHref(msisdn)}"><i class="fa-brands fa-whatsapp"></i></a>` : ''}
           </td>
         </tr>`;
         tbody.insertAdjacentHTML('beforeend', row);
@@ -1240,8 +1259,8 @@ async function loadCompletedData(){
         const msisdn = normalizeMsisdnMY(p.noTelefon||'');
         const pdpaHTML = p.pdpaFileId
           ? `<div class="d-flex flex-wrap gap-1">
-              <a class="btn btn-sm btn-outline-success" target="_blank" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
-              <a class="btn btn-sm btn-outline-primary" target="_blank" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
+              <a class="btn btn-sm btn-outline-success" target="_blank" rel="noopener" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
+              <a class="btn btn-sm btn-outline-primary" target="_blank" rel="noopener" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
             </div>`
           : `<span class="text-muted">-</span>`;
 
@@ -1484,6 +1503,19 @@ async function exportCompletedCSV(){
 document.addEventListener('DOMContentLoaded', ()=>{
   initGoogleSignIn();
 });
+
+/* =======================
+   Tambahan: aksi ringkas lain
+======================= */
+async function markLabStatus(noIC, status){
+  try{
+    const res = await postForm({ action:'updateLabStatus', noIC, status, staff: STAFF_EMAIL }, { msg:'Mengemas kini status lab…' });
+    if (res.status==='success'){
+      toast('Berjaya','Status makmal dikemas kini','success');
+      loadLabFollowUp(); loadCompletedData(); loadDashboardData();
+    } else throw new Error(res.message||'Gagal kemaskini');
+  }catch(e){ toast('Ralat', e.message, 'danger'); }
+}
 </script>
 </body>
 </html>
