--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
    KONFIG (EDIT INI SAHAJA)
 ======================= */
 // 1) Isi URL Web App Apps Script (deployment terkini)
-const SCRIPT_URL = 'PASTE_WEB_APP_EXEC_URL_DI_SINI';
+const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbx6TKE0vDDPO3-36cY7xjacAbGL0HIRKCrORNm-sED9y5NpIeIUk9gyrpiWy-S7vbc/exec';
 // 2) Google OAuth Client ID (Google Cloud Console)
 const GOOGLE_CLIENT_ID = '863564124015-838ksbuk27f0kkomm16hnc3bu608pbrr.apps.googleusercontent.com';
 // 3) Logo (optional)
