--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
   .stat-card .number{font-size:1.3rem}
 }
 
-/* NADI Table Styles - UPDATED */
+/* NADI Table Styles - UPDATED with better layout */
 .nadi-table-container {
   overflow-x: auto;
   margin-bottom: 1rem;
@@ -165,10 +165,10 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 
 .nadi-table {
   width: 100%;
-  min-width: 1600px;
+  min-width: 1800px;
   border-collapse: separate;
   border-spacing: 0;
-  table-layout: auto;
+  table-layout: fixed;
 }
 
 .nadi-table th {
@@ -181,14 +181,16 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
   padding: 8px 12px;
   border-bottom: 2px solid #dee2e6;
   white-space: nowrap;
+  text-align: center;
 }
 
 .nadi-table td {
-  padding: 4px 8px;
+  padding: 6px 8px;
   border-bottom: 1px solid #dee2e6;
   vertical-align: middle;
   height: 42px;
   position: relative;
+  overflow: visible;
 }
 
 .nadi-table tr:last-child td {
@@ -211,18 +213,84 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
   height: calc(1.5em + 0.5rem + 2px);
 }
 
+/* Improved column widths for better layout */
+.nadi-table th:nth-child(1), .nadi-table td:nth-child(1) { width: 180px; } /* Nama */
+.nadi-table th:nth-child(2), .nadi-table td:nth-child(2) { width: 140px; } /* No IC */
+.nadi-table th:nth-child(3), .nadi-table td:nth-child(3) { width: 120px; } /* No Telefon */
+.nadi-table th:nth-child(4), .nadi-table td:nth-child(4) { width: 200px; } /* Alamat */
+.nadi-table th:nth-child(5), .nadi-table td:nth-child(5) { width: 100px; } /* BP */
+.nadi-table th:nth-child(6), .nadi-table td:nth-child(6) { width: 100px; } /* PR */
+.nadi-table th:nth-child(7), .nadi-table td:nth-child(7) { width: 150px; } /* DXT */
+.nadi-table th:nth-child(8), .nadi-table td:nth-child(8) { width: 100px; } /* Tinggi */
+.nadi-table th:nth-child(9), .nadi-table td:nth-child(9) { width: 100px; } /* Berat */
+.nadi-table th:nth-child(10), .nadi-table td:nth-child(10) { width: 80px; } /* BMI */
+.nadi-table th:nth-child(11), .nadi-table td:nth-child(11) { width: 80px; } /* Layak */
+.nadi-table th:nth-child(12), .nadi-table td:nth-child(12) { width: 100px; } /* Tidak Layak */
+.nadi-table th:nth-child(13), .nadi-table td:nth-child(13) { width: 250px; } /* TCA & Staff */
+.nadi-table th:nth-child(14), .nadi-table td:nth-child(14) { width: 200px; } /* Tindakan */
+
+/* Input fields styling */
+.nadi-table input[type="text"],
+.nadi-table input[type="date"],
+.nadi-table input[type="time"] {
+  width: 100%;
+  min-width: 80px;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+  border: 1px solid #dee2e6;
+  border-radius: 4px;
+}
+
+.nadi-table input[type="text"]:focus,
+.nadi-table input[type="date"]:focus,
+.nadi-table input[type="time"]:focus {
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+}
+
+/* Status checkboxes */
+.nadi-table .status-check {
+  text-align: center;
+}
+
+.nadi-table .status-check .form-check-input {
+  width: 1.2em;
+  height: 1.2em;
+  margin-top: 0;
+}
+
+/* Action buttons */
 .nadi-table .action-buttons {
   display: flex;
   gap: 4px;
   flex-wrap: wrap;
-}
-
-.nadi-table .status-check {
-  display: flex;
   justify-content: center;
-  align-items: center;
 }
 
+.nadi-table .action-buttons .btn {
+  white-space: nowrap;
+}
+
+/* DXT input group */
+.nadi-table .dxt-input-group {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+}
+
+.nadi-table .dxt-input-group .dropdown-toggle {
+  min-width: 90px;
+  padding: 0.25rem 0.5rem;
+  font-size: 0.875rem;
+}
+
+.nadi-table .dxt-input-group .form-control {
+  flex: 1;
+  min-width: 60px;
+}
+
+/* TCA fields */
 .nadi-table .tca-fields {
   display: flex;
   gap: 4px;
@@ -230,18 +298,36 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
 }
 
 .nadi-table .tca-fields .form-control {
+  min-width: 80px;
+}
+
+.nadi-table .tca-fields input[type="date"],
+.nadi-table .tca-fields input[type="time"] {
+  min-width: 100px;
+}
+
+.nadi-table .tca-fields input[type="text"] {
   min-width: 120px;
 }
 
-.nadi-table .bmi-field {
-  min-width: 80px;
+/* WhatsApp button highlight */
+.nadi-wa {
+  background-color: #25D366 !important;
+  color: white !important;
+  border-color: #25D366 !important;
+}
+
+.nadi-wa:hover {
+  background-color: #128C7E !important;
+  border-color: #128C7E !important;
 }
 
 /* Auto-grow input wrapper */
 .input-grow-wrapper {
   position: relative;
   display: inline-block;
-  min-width: 100px;
+  min-width: 80px;
+  width: 100%;
 }
 
 .input-grow-wrapper .input-mirror {
@@ -258,19 +344,26 @@ body{font-family:'Segoe UI',Tahoma,Geneva,Verdana,sans-serif;background:#f5f7fa;
   left: 0;
   top: 0;
   width: 100%;
-  min-width: 100px;
+  min-width: 80px;
+  padding: 0.25rem 0.5rem;
+  border: 1px solid #dee2e6;
+  border-radius: 4px;
+  font-size: 0.875rem;
 }
 
-/* WhatsApp button highlight */
-.nadi-wa {
-  background-color: #25D366 !important;
-  color: white !important;
-  border-color: #25D366 !important;
+.input-grow-wrapper input:focus {
+  border-color: #86b7fe;
+  outline: 0;
+  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 }
 
-.nadi-wa:hover {
-  background-color: #128C7E !important;
-  border-color: #128C7E !important;
+/* Zebra striping for better readability */
+.nadi-table tbody tr:nth-child(odd) {
+  background-color: rgba(0, 0, 0, 0.02);
+}
+
+.nadi-table tbody tr:hover {
+  background-color: rgba(0, 0, 0, 0.05);
 }
 </style>
 </head>
@@ -1161,7 +1254,6 @@ function setupNADI(){
   document.getElementById('btnAddNadiRow').addEventListener('click', addNadiRow);
 }
 
-// Function to create auto-growing input fields
 function createAutoGrowInput(placeholder = '', initialWidth = 100) {
   const wrapper = document.createElement('div');
   wrapper.className = 'input-grow-wrapper';
@@ -1172,9 +1264,8 @@ function createAutoGrowInput(placeholder = '', initialWidth = 100) {
   
   const input = document.createElement('input');
   input.type = 'text';
-  input.className = 'form-control form-control-sm nadi-input';
+  input.className = 'form-control form-control-sm';
   input.placeholder = placeholder;
-  input.style.minWidth = initialWidth + 'px';
   
   // Update mirror text and adjust width
   function updateSize() {
@@ -1238,10 +1329,10 @@ function addNadiRow(){
   // DXT
   const dxtCell = document.createElement('td');
   const dxtGroup = document.createElement('div');
-  dxtGroup.className = 'input-group input-group-sm';
+  dxtGroup.className = 'dxt-input-group';
   
   const dxtTypeBtn = document.createElement('button');
-  dxtTypeBtn.className = 'btn btn-outline-secondary dropdown-toggle';
+  dxtTypeBtn.className = 'btn btn-outline-secondary dropdown-toggle btn-sm';
   dxtTypeBtn.setAttribute('data-bs-toggle', 'dropdown');
   dxtTypeBtn.type = 'button';
   dxtTypeBtn.textContent = 'Fasting';
@@ -1267,7 +1358,10 @@ function addNadiRow(){
   randomItem.appendChild(randomLink);
   dxtTypeMenu.appendChild(randomItem);
   
-  const { wrapper: dxtWrapper, input: dxtInput } = createAutoGrowInput('DXT (mmol/L)', 90);
+  const dxtInput = document.createElement('input');
+  dxtInput.type = 'text';
+  dxtInput.className = 'form-control form-control-sm';
+  dxtInput.placeholder = 'mmol/L';
   
   const dxtTypeHidden = document.createElement('input');
   dxtTypeHidden.type = 'hidden';
@@ -1276,7 +1370,7 @@ function addNadiRow(){
   
   dxtGroup.appendChild(dxtTypeBtn);
   dxtGroup.appendChild(dxtTypeMenu);
-  dxtGroup.appendChild(dxtWrapper);
+  dxtGroup.appendChild(dxtInput);
   dxtGroup.appendChild(dxtTypeHidden);
   dxtCell.appendChild(dxtGroup);
   row.appendChild(dxtCell);
@@ -1296,7 +1390,7 @@ function addNadiRow(){
   // BMI
   const bmiCell = document.createElement('td');
   const bmiInput = document.createElement('input');
-  bmiInput.className = 'form-control form-control-sm bmi-field';
+  bmiInput.className = 'form-control form-control-sm';
   bmiInput.placeholder = 'BMI';
   bmiInput.disabled = true;
   bmiCell.appendChild(bmiInput);
@@ -1510,7 +1604,7 @@ function addNadiRow(){
       const file = await buildNadiReportImage(data);
       if (file) {
         // Create WhatsApp message with patient info
-        const message = `Laporan Saringan NADI\nNama: ${data.nama}\nIC: ${data.ic}\nBP: ${data.bp}\nPR: ${data.pr}\nDXT (${data.dxtType}): ${data.dxt}\nTinggi: ${data.tinggi} cm\nBerat: ${data.berat} kg\nBMI: ${data.bmi}\nStatus: ${data.layak ? 'Layak PEKA B40' : 'Tidak Layak PEKA B40'}`;
+        const message = `Laporan Saringan NADI\nNama: ${data.nama}\nIC: ${data.ic}\nBP: ${data.bp}\nPR: ${data.pr}\nDXT (${data.dxtType}): ${data.dxt}\nTinggi: ${data.tinggi} cm\nBerat: ${data.berat} kg\nBMI: ${data.bmi}\nStatus: ${data.layak ? 'LAYAK Saringan PEKA B40' : 'TIDAK LAYAK Saringan PEKA B40'}`;
         
         // Create form data to send image
         const formData = new FormData();
@@ -1564,7 +1658,7 @@ async function exportNadiCSV() {
       row.querySelector('td:nth-child(5) input').value.trim(),
       row.querySelector('td:nth-child(6) input').value.trim(),
       row.querySelector('.nadi-dxt-type').value,
-      row.querySelector('.nadi-dxt-wrap input[type=text]').value.trim(),
+      row.querySelector('.dxt-input-group input[type=text]').value.trim(),
       row.querySelector('td:nth-child(8) input').value.trim(),
       row.querySelector('td:nth-child(9) input').value.trim(),
       row.querySelector('td:nth-child(10) input').value.trim(),
@@ -1771,7 +1865,7 @@ function renderTcaList(mode){
   filtered.forEach(p=>{
     const msisdn = normalizeMsisdnMY(p.noTelefon||'');
     const badgeCls = p.status==='CALLED' ? 'bg-success' : (parseDDMMYYYY(p.tarikhTCA)?.getTime()<today.getTime() ? 'bg-secondary' : 'bg-warning');
-    const label = p.status==='CALLED' ? 'CALLED' : (parseDDMMYYYY(p.tarikhTCA)?.getTime()<today.getTime() ? 'LEPAS' : (isSameDay(parseDDMMYYYY(p.tarikhTCA), today) ? 'HARI INI' : 'AKAN DATANG'));
+    const label = p.status==='CALLED' ? 'CALLED' : (parseDDMMYYYY(p.tarikhTCA)?.getTime()<today.getTime() ? 'LEPAS' : (isSameDay(parseDDMMYYYY(p.tarikhTCA), today) ? 'HARI INI' : 'AKAN DATANG');
     const row = `
       <tr data-ic="${p.noIC}">
         <td>${p.nama}</td>
@@ -1895,6 +1989,7 @@ async function loadSecondVisitData(){
           ? `<div class="d-flex flex-wrap gap-1">
               <a class="btn btn-sm btn-outline-success" target="_blank" href="https://drive.google.com/file/d/${p.pdpaFileId}/preview"><i class="fa-solid fa-eye"></i> Lihat</a>
               <a class="btn btn-sm btn-outline-primary" target="_blank" href="https://drive.google.com/uc?export=download&id=${p.pdpaFileId}"><i class="fa-solid fa-download"></i> Muat Turun</a>
+              <button class="btn btn-sm btn-outline-danger" onclick="deletePDPA('${p.noIC}')"><i class="fa-solid fa-trash"></i> Padam</button>
             </div>`
           : `<span class="text-danger">PDPA tiada</span>`;
 
